--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,3 @@
 SECRET_KEY=changeme
-DATABASE_URL=sqlite:///db.sqlite3
+DATABASE_URL=postgres://eventos2:eventos2@localhost:8254/eventos2
 DEBUG=True
