--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "^3.10"
 psycopg2-binary = "^2.8"
 drf-yasg = "^1.16"
 packaging = "^19.2"
+Pillow = "^6.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
