--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.8"
 drf-yasg = "^1.16"
 packaging = "^19.2"
 Pillow = "^6.2.0"
+gunicorn = "^19.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
