--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,4 @@
 SECRET_KEY=changeme
 DATABASE_URL=postgres://eventos2:eventos2@localhost:8254/eventos2
+REDIS_URL=redis://localhost:8255/0
 DEBUG=True
