Add email settings

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,4 @@
 SECRET_KEY=changeme
 DATABASE_URL=postgres://eventos2:eventos2@localhost:8254/eventos2
+#EMAIL_URL=smtp+tls://USERNAME:PASSWORD@smtp.mailtrap.io:2525
 DEBUG=True
