--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,9 @@ deploy_test:
         DEBUG=True
         EOF
     - poetry run python manage.py collectstatic
+    # Allow web server (nginx) to traverse directories and read files,
+    # so that it can serve the static files.
+    - chmod -R u=rwX,go=rX static/
     - cd ..
     - cd frontend
     - npm run build
@@ -74,8 +77,8 @@ deploy_test:
     - echo "$TEST_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - export TEST_DEPLOY=$(date +%Y%m%d%H%M%S)
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "mkdir \"/srv/eventos2/$TEST_DEPLOY/\""
-    - scp -r -P 1022 backend "eventos2@eventos2.fabricadesoftware.ifc.edu.br:/srv/eventos2/$TEST_DEPLOY/backend"
-    - scp -r -P 1022 frontend/dist "eventos2@eventos2.fabricadesoftware.ifc.edu.br:/srv/eventos2/$TEST_DEPLOY/frontend_dist"
+    - scp -r -p -P 1022 backend "eventos2@eventos2.fabricadesoftware.ifc.edu.br:/srv/eventos2/$TEST_DEPLOY/backend"
+    - scp -r -p -P 1022 frontend/dist "eventos2@eventos2.fabricadesoftware.ifc.edu.br:/srv/eventos2/$TEST_DEPLOY/frontend_dist"
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "cd \"/srv/eventos2/$TEST_DEPLOY/\" && virtualenv -p python3 venv && ./venv/bin/pip install -r backend/requirements.txt"
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "cd \"/srv/eventos2/$TEST_DEPLOY/backend\" && ../venv/bin/python manage.py migrate"
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "ln -s /srv/eventos2/media \"/srv/eventos2/$TEST_DEPLOY/backend/media\""
