--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ Pillow = "^6.2.0"
 gunicorn = "^19.9.0"
 huey = "^2.1.2"
 redis = "^3.3.11"
+sentry-sdk = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
