--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ toml = "^0.10.0"
 flake8-bugbear = "^19.8"
 isort = "^4.3"
 bandit = "^1.6"
+pytest-cov = "^2.8.1"
 
 [tool.isort]
 multi_line_output = 3
