--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@ services:
   - postgres:12
 
 variables:
-    PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-    POSTGRES_DB: test_eventos2
-    POSTGRES_USER: eventos2
-    POSTGRES_PASSWORD: unsafe-password-for-testing
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  POSTGRES_DB: test_eventos2
+  POSTGRES_USER: eventos2
+  POSTGRES_PASSWORD: unsafe-password-for-testing
 
 stages:
   - lint
@@ -24,7 +24,7 @@ cache:
 default:
   before_script:
     - cd backend
-    - pip install --pre poetry==1.0.0b3
+    - pip install poetry==1.0.0
     - mkdir -p ~/.config/pypoetry
     - touch ~/.config/pypoetry/config.toml
     - poetry config virtualenvs.path $CI_PROJECT_DIR/.cache/venvs
@@ -65,13 +65,13 @@ deploy_test:
     - cd backend
     - poetry export -f requirements.txt > requirements.txt
     - |
-        cat << EOF >.env
-        SECRET_KEY=$TEST_SECRET_KEY
-        DATABASE_URL=postgres://eventos2@/eventos2
-        SENTRY_URL=$TEST_SENTRY_URL
-        ALLOWED_HOSTS=eventos2.fabricadesoftware.ifc.edu.br
-        DEBUG=True
-        EOF
+      cat << EOF >.env
+      SECRET_KEY=$TEST_SECRET_KEY
+      DATABASE_URL=postgres://eventos2@/eventos2
+      SENTRY_URL=$TEST_SENTRY_URL
+      ALLOWED_HOSTS=eventos2.fabricadesoftware.ifc.edu.br
+      DEBUG=True
+      EOF
     - poetry run -- python eventos2/manage.py collectstatic
     # Allow web server (nginx) to traverse directories and read files,
     # so that it can serve the static files.
