--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,14 +8,14 @@ authors = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-Django = "^2.2"
+Django = "^3.0.2"
 django-environ = "^0.4.5"
 djangorestframework = "^3.10"
 psycopg2-binary = "^2.8"
 drf-yasg = "^1.16"
-packaging = "^19.2"
-Pillow = "^6.2.0"
-gunicorn = "^19.9.0"
+packaging = "^20.0"
+Pillow = "^7.0.0"
+gunicorn = "^20.0.4"
 huey = "^2.1.2"
 redis = "^3.3.11"
 sentry-sdk = "^0.13.0"
@@ -23,12 +23,12 @@ rules = "^2.1"
 pytest-django = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.0"
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+pytest = "^5.3.2"
+black = "^19.10b0"
 flake8 = "^3.7"
 pre-commit = "^1.18"
 toml = "^0.10.0"
-flake8-bugbear = "^19.8"
+flake8-bugbear = "^20.1.2"
 isort = "^4.3"
 bandit = "^1.6"
 pytest-cov = "^2.8.1"
