--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7,<3.9"
 Django = "^3.0.2"
 django-environ = "^0.4.5"
 djangorestframework = "^3.10"
@@ -21,6 +21,7 @@ redis = "^3.3.11"
 sentry-sdk = "^0.13.0"
 rules = "^2.1"
 pytest-django = "^3.7.0"
+djangorestframework-simplejwt = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
