--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ sentry-sdk = "^0.13.0"
 rules = "^2.1"
 pytest-django = "^3.7.0"
 djangorestframework-simplejwt = "^4.4.0"
+django-cors-headers = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
