--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@mdi/font": "^4.7.95",
     "@nuxtjs/auth": "^4.8.5",
     "@nuxtjs/axios": "^5.9.2",
     "@nuxtjs/proxy": "^1.3.3",
