--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ deploy_test:
     - chmod -R u=rwX,go=rX static/
     - rm -rf .cache
     - apt-get update -y
-    - apt-get install -yqq openssh-client
+    - apt-get install -yqq openssh-client rsync
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - echo "[eventos2.fabricadesoftware.ifc.edu.br]:1022 ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIAQHt8NDADsuuX0yyLocmnA+L4MLEyrQZvSV7M0KRz9m" >> ~/.ssh/known_hosts
@@ -77,7 +77,7 @@ deploy_test:
     - echo "$TEST_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - export TEST_DEPLOY=$(date +%Y%m%d%H%M%S)
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "mkdir \"/srv/eventos2/$TEST_DEPLOY/\""
-    - scp -r -p -P 1022 . "eventos2@eventos2.fabricadesoftware.ifc.edu.br:/srv/eventos2/$TEST_DEPLOY"
+    - rsync -rtz -e 'ssh -p 1022' ./ "eventos2@eventos2.fabricadesoftware.ifc.edu.br:/srv/eventos2/$TEST_DEPLOY/"
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "cd \"/srv/eventos2/$TEST_DEPLOY/\" && virtualenv -p python3 venv && ./venv/bin/pip install -r requirements.txt"
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "cd \"/srv/eventos2/$TEST_DEPLOY/\" && PYTHONPATH='.' ../venv/bin/python manage.py migrate"
     - ssh -p 1022 eventos2@eventos2.fabricadesoftware.ifc.edu.br "cd \"/srv/eventos2/$TEST_DEPLOY/frontend\" && npm install && npm run build"
