--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,30 +13,28 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "@mdi/font": "^4.7.95",
-    "@nuxtjs/auth": "^4.8.5",
-    "@nuxtjs/axios": "^5.9.2",
+    "@mdi/font": "^5.0.45",
+    "@nuxtjs/auth": "^4.9.0",
+    "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/style-resources": "^1.0.0",
-    "dayjs": "^1.8.19",
-    "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.2",
-    "nuxt-i18n": "^6.4.1",
-    "vee-validate": "^3.2.1",
-    "vuelidate": "^0.7.4",
-    "vuelidate-error-extractor": "^2.4.1"
+    "dayjs": "^1.8.23",
+    "nuxt": "^2.12.0",
+    "nuxt-buefy": "^0.3.24",
+    "nuxt-i18n": "^6.6.1",
+    "vee-validate": "^3.2.5"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "babel-eslint": "^10.0.3",
+    "@nuxtjs/eslint-config": "^2.0.2",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-i18n-json": "^2.4.4",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "node-sass": "^4.13.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0"
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.13.1",
+    "prettier": "^2.0.2",
+    "sass-loader": "^8.0.2"
   }
 }
