--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ rules = "^2.1"
 pytest-django = "^3.7.0"
 djangorestframework-simplejwt = "^4.4.0"
 django-cors-headers = "^3.2.1"
+python-magic = "^0.4.18"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
