--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ Django = "^3.0.2"
 django-environ = "^0.4.5"
 djangorestframework = "^3.10"
 psycopg2-binary = "^2.8"
-drf-yasg = "^1.16"
 packaging = "^20.0"
 Pillow = "^7.0.0"
 gunicorn = "^20.0.4"
@@ -24,6 +23,7 @@ pytest-django = "^3.7.0"
 djangorestframework-simplejwt = "^4.4.0"
 django-cors-headers = "^3.2.1"
 python-magic = "^0.4.18"
+drf-spectacular = "^0.9.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
