--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ flake8-bugbear = "^20.1.2"
 isort = "^4.3"
 bandit = "^1.6"
 pytest-cov = "^2.8.1"
+pytest-freezegun = "^0.4.2"
+python-dateutil = "^2.8.1"
 
 [tool.isort]
 multi_line_output = 3
