stop using proxy in dev; define baseurl via runtime config

--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,8 @@ SECRET_KEY=changeme
 DATABASE_URL=postgres://eventos2:eventos2@localhost:8254/eventos2
 #EMAIL_URL=smtp+tls://USERNAME:PASSWORD@smtp.mailtrap.io:2525
 DEBUG=True
+CORS_ORIGIN_WHITELIST=http://localhost:3000
+
 EVENTOS2_FRONTEND_FORCE_SLUG=test
+EVENTOS2_FRONTEND_BASE_URL=http://localhost:8000
+EVENTOS2_FRONTEND_BROWSER_BASE_URL=http://localhost:8000
