--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,28 +5,24 @@
   "description": "Eventos2",
   "author": "yurihs",
   "scripts": {
-    "build": "nuxt build --dotenv ../.env",
+    "build": "nuxt build --standalone",
     "dev": "nuxt dev --dotenv ../.env",
     "generate": "nuxt generate --dotenv ../.env",
     "lint": "eslint --ext .js,.vue . && eslint --ext .json ./locales",
     "lintfix": "eslint --fix --ext .js,.vue . && eslint --fix --ext .json ./locales",
-    "start": "nuxt start --dotenv ../.env"
+    "start": "nuxt-start --dotenv ../.env"
   },
   "dependencies": {
-    "@mdi/font": "^5.3.45",
-    "@nuxtjs/auth-next": "^5.0.0-1595976864.509d9d6",
-    "@nuxtjs/axios": "^5.12.0",
-    "@nuxtjs/proxy": "^1.3.3",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "dayjs": "^1.8.29",
-    "nuxt": "^2.13.3",
-    "nuxt-buefy": "^0.3.31",
-    "nuxt-i18n": "^6.13.1",
-    "vee-validate": "^3.3.7"
+    "nuxt-start": "^2.14.1"
   },
   "devDependencies": {
+    "@mdi/font": "^5.4.55",
+    "@nuxtjs/auth-next": "^5.0.0-1595976864.509d9d6",
+    "@nuxtjs/axios": "^5.12.1",
     "@nuxtjs/eslint-config": "^2.0.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.1.0",
+    "dayjs": "^1.8.32",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^3.0.4",
@@ -34,7 +30,11 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
+    "nuxt": "^2.14.1",
+    "nuxt-buefy": "^0.3.31",
+    "nuxt-i18n": "^6.13.7",
     "prettier": "^2.0.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vee-validate": "^3.3.8"
   }
 }
