--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,4 +1,4 @@
-FROM python:3.8-slim-buster
+FROM python:3.8-buster
 
 RUN pip install poetry
 RUN poetry config virtualenvs.create false
@@ -10,4 +10,4 @@ COPY eventos2/ /tmp/eventos2/
 RUN cd /tmp/ && poetry install --no-dev && SECRET_KEY=static DATABASE_URL=sqlite:///:memory: poetry run python /tmp/manage.py collectstatic && chmod -R u=rwX,g=rX,o=rX /tmp/static
 
 WORKDIR /tmp/eventos2
-CMD [ "poetry", "run", "gunicorn", "--worker-tmp-dir=/dev/shm", "--workers=2", "--threads=4", "--worker-class=gthread", "--bind=0.0.0.0:8000", "eventos2.wsgi" ]
+CMD poetry run gunicorn --worker-tmp-dir=/dev/shm --workers=2 --threads=4 --worker-class=gthread --bind=0.0.0.0:$PORT eventos2.wsgi
