--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,12 +1,19 @@
-FROM node:14-buster-slim
+FROM node:14-buster AS builder
 
-WORKDIR /tmp/frontend
+WORKDIR /src
+COPY frontend/ .
 
-COPY frontend/package.json frontend/package-lock.json ./
-RUN npm install --only=production
-
-COPY frontend/ ./
+RUN NODE_ENV= npm ci
 RUN npm run build
 
-ENV NUXT_HOST=0.0.0.0 NUXT_PORT=3000
+RUN rm -rf node_modules && \
+    npm ci --only=production
+
+
+FROM node:14-alpine
+
+WORKDIR /src
+COPY --from=builder /src .
+
+ENV HOST=0.0.0.0
 CMD [ "npm", "run", "start" ]
