--- a/.env.sample
+++ b/.env.sample
@@ -5,5 +5,6 @@ DEBUG=True
 CORS_ORIGIN_WHITELIST=http://localhost:3000
 
 EVENTOS2_FRONTEND_FORCE_SLUG=test
-EVENTOS2_FRONTEND_BASE_URL=http://localhost:8000
-EVENTOS2_FRONTEND_BROWSER_BASE_URL=http://localhost:8000
+EVENTOS2_FRONTEND_BASE_URL=http://localhost:8000/
+EVENTOS2_FRONTEND_BROWSER_BASE_URL=/
+EVENTOS2_FRONTEND_ENABLE_PROXY=true
