--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,45 @@
 ---
 
-version: '3.1'
+version: '3'
 
 services:
+  web:
+    image: nginx:1
+    command: "sh -c 'apt update && DEBIAN_FRONTEND=noninteractive apt install ssl-cert && exec nginx -g \"daemon off;\"'"
+    volumes:
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+      - media:/tmp/media
+      - static:/tmp/static
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - frontend
+      - backend
+  frontend:
+    build:
+      context: .
+      dockerfile: ./docker/frontend.dockerfile
+    environment:
+      EVENTOS2_FRONTEND_BASE_URL: http://backend:8000/
+      EVENTOS2_FRONTEND_BROWSER_BASE_URL: /
+      EVENTOS2_FRONTEND_FORCE_SLUG: test
+    depends_on:
+      - backend
+  backend:
+    build:
+      context: .
+      dockerfile: ./docker/backend.dockerfile
+    environment:
+      PORT: "8000"
+      SECRET_KEY: "${SECRET_KEY}"
+      DATABASE_URL: 'postgres://eventos2:eventos2@db:5432/eventos2'
+      ALLOWED_HOSTS: backend,localhost
+    volumes:
+      - media:/tmp/media
+      - static:/tmp/static
+    depends_on:
+      - db
   db:
     image: postgres:12
     restart: always
@@ -12,8 +49,8 @@ services:
       POSTGRES_DB: eventos2
     volumes:
       - db:/var/lib/postgresql/data
-    ports:
-      - '8254:5432'
 
 volumes:
   db:
+  media:
+  static:
