remover proxy do frontend; customizar config do nginx em produção para fazer o proxy

--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,4 @@ CORS_ORIGIN_WHITELIST=http://localhost:3000
 
 EVENTOS2_FRONTEND_FORCE_SLUG=test
 EVENTOS2_FRONTEND_BASE_URL=http://localhost:8000/
-EVENTOS2_FRONTEND_BROWSER_BASE_URL=/
-EVENTOS2_FRONTEND_ENABLE_PROXY=true
+EVENTOS2_FRONTEND_BROWSER_BASE_URL=http://localhost:8000/
