--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,33 +8,34 @@
     "build": "nuxt build --standalone",
     "dev": "nuxt dev --dotenv ../.env",
     "generate": "nuxt generate --dotenv ../.env",
-    "lint": "eslint --ext .js,.vue . && eslint --ext .json ./locales",
-    "lintfix": "eslint --fix --ext .js,.vue . && eslint --fix --ext .json ./locales",
+    "lint": "eslint --ext .js,.vue .",
+    "lintfix": "eslint --fix --ext .js,.vue .",
     "start": "nuxt-start --dotenv ../.env"
   },
   "dependencies": {
-    "nuxt-start": "^2.14.1"
+    "nuxt-start": "^2.15.8"
   },
   "devDependencies": {
-    "@mdi/font": "^5.4.55",
+    "@babel/eslint-parser": "^7.16.5",
+    "@mdi/font": "^6.5.95",
     "@nuxtjs/auth-next": "^5.0.0-1595976864.509d9d6",
     "@nuxtjs/axios": "^5.12.1",
-    "@nuxtjs/eslint-config": "^2.0.2",
+    "@nuxtjs/eslint-config": "^8.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.1.0",
-    "dayjs": "^1.8.32",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-loader": "^3.0.4",
-    "eslint-plugin-i18n-json": "^2.4.4",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.1",
-    "nuxt": "^2.14.1",
-    "nuxt-buefy": "^0.4.2",
-    "nuxt-i18n": "^6.13.7",
-    "prettier": "^2.0.5",
-    "sass-loader": "^8.0.2",
-    "vee-validate": "^3.3.8"
+    "dayjs": "^1.10.7",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "node-sass": "^6.0.1",
+    "nuxt": "^2.15.8",
+    "nuxt-buefy": "^0.4.13",
+    "nuxt-i18n": "^6.28.1",
+    "prettier": "^2.5.1",
+    "sass-loader": "^10.2.0",
+    "vee-validate": "^3.3.8",
+    "webpack": "^4.46.0"
   }
 }
